// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink component should render external link with icon 1`] = `
<DocumentFragment>
  <a
    class="external-link"
    href="#"
    rel="noopener"
    target="_blank"
  >
    <span>
      Link text
    </span>
    <test-file-stub
      data-testid="external-link-icon"
      width="12.5"
    />
  </a>
</DocumentFragment>
`;

exports[`ExternalLink component should render external link without target: _blank attribute 1`] = `
<DocumentFragment>
  <a
    class="external-link"
    href="#"
    rel="noopener"
  >
    <span>
      Link text
    </span>
    <test-file-stub
      data-testid="external-link-icon"
      width="12.5"
    />
  </a>
</DocumentFragment>
`;

exports[`ExternalLink component should render just the url without http(s), www, /$ if no child text is passed 1`] = `
<DocumentFragment>
  <a
    class="external-link"
    href="https://www.ebi.ac.uk/"
    rel="noopener"
    target="_blank"
  >
    ebi.ac.uk
    <test-file-stub
      data-testid="external-link-icon"
      width="12.5"
    />
  </a>
</DocumentFragment>
`;
